Sat Nov  9 00:26:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (GetLastError): already defined in windows.h on nowadays
	  cygwin, and caused the confliction with the system provided
	  definition on cygwin64.  by @kou1okada [Fixes GH-433].

Fri Nov  8 18:35:31 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* lib/open3.rb: receive arguments as keyword arguments.

Fri Nov  8 13:19:26 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* io.c (rb_io_open_with_args): use RARRAY_CONST_PTR().

	* io.c (rb_scan_open_args): use const qualifier for above.

	* io.c (rb_open_file): ditto.

	* io.c (rb_io_open_with_args): ditto.

Fri Nov  8 11:35:06 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* dir.c, pack.c, ruby.c, struct.c, vm_eval.c: use RARRAY_CONST_PTR().

Fri Nov  8 10:58:02 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* compile.c (iseq_build_from_ary_exception): use RARRAY_CONST_PTR().

	* compile.c (iseq_build_from_ary_body): ditto.

Fri Nov  8 10:49:34 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* enumerator.c (append_method): use RARRAY_CONST_PTR().

	* enumerator.c (lazy_init_iterator): ditto.

Fri Nov  8 02:44:29 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (vm_malloc_increase): check GVL before gc_rest_sweep().
	  vm_malloc_increase() can be called without GVL.
	  However, gc_rest_sweep() assumes acquiring GVL.
	  To avoid this problem, check GVL before gc_rest_sweep().
	  [Bug #9090]

	  This workaround introduces possibility to set malloc_limit as
	  wrong value (*1). However, this may be rare case. So I commit it.

	  *1: Without rest_sweep() here, gc_rest_sweep() can decrease
	      malloc_increase due to ruby_sized_xfree().

Fri Nov  8 02:50:25 2013  Zachary Scott  <e@zzak.io>

	* lib/securerandom.rb: [DOC] specify arguments passed to ::random_bytes
	  By @chastell [Fixes GH-412] https://github.com/ruby/ruby/pull/412

Fri Nov  8 02:43:01 2013  Zachary Scott  <e@zzak.io>
