@@ -15,6 +15,7 @@
 
 #include "ruby/ruby.h"
 #include "ruby/debug.h"
+#include "objspace.h"
 
 size_t rb_gc_count(void); /* from gc.c */
 
@@ -26,20 +27,6 @@ struct traceobj_arg {
     st_table *object_table; /* obj (VALUE) -> allocation_info */
     st_table *str_table;    /* cstr -> refcount */
     struct traceobj_arg *prev_traceobj_arg;
-};
-
-/* all of information don't need marking. */
-struct allocation_info {
-    int living;
-    VALUE flags;
-    VALUE klass;
-
-    /* allocation info */
-    const char *path;
-    unsigned long line;
-    const char *class_path;
-    VALUE mid;
-    size_t generation;
 };
 
 static const char *
@@ -339,6 +326,12 @@ lookup_allocation_info(VALUE obj)
 	}
     }
     return NULL;
+}
+
+struct allocation_info *
+objspace_lookup_allocation_info(VALUE obj)
+{
+    return lookup_allocation_info(obj);
 }
 
 /*
